# incubator-guacamole-server

./: Makefile.am  configure.ac
src/common/: Makefile.am  guac_surface.c  surface.c
src/common-ssh/: Makefile.am
src/common/common/: surface.h
src/guacd/: Makefile.am  connection.c
src/guacenc/: Makefile.am
src/libguac/: Makefile.am  dump.c  dump.h  ffmpeg-compat.c  ffmpeg-compat.h  hash.c  parser.c  scroll.c  video-private.h  video.c
src/libguac/guacamole/: hash.h  scroll.h  video-types.h  video.h
src/libguacd/: Makefile.am
src/protocols/rdp/: Makefile.am  rdp.c  rdp_fs.c  rdp_settings.c  rdp_settings.h  settings.c
src/protocols/ssh/: Makefile.am  argv.c  client.c  settings.c  settings.h  ssh.c
src/protocols/telnet/: Makefile.am  argv.c
src/protocols/vnc/: Makefile.am  client.c  client.h  clipboard.c  clipboard.h  cursor.c  display.c  display.h  input.c  input.h  settings.c  settings.h  user.c  vnc.c  vnc.h
src/protocols/vnc/backend/: Makefile.am  backend.h  callbacks.h  client.h  clipboard.h  framebuffer.h  input.h  settings.h
src/protocols/vnc/backend/libvncserver-impl/: auth-internal.h  auth.c  backend.c  client-internal.h  client.c  clipboard-internal.h  clipboard.c  cursor-internal.h  cursor.c  framebuffer-internal.h  framebuffer.c  input.c
src/protocols/vnc/backend/realvnc-impl/: addon.c  addon.h  auth-internal.h  auth.c  backend.c  client-internal.h  client.c  clipboard-internal.h  clipboard.c  event.c  event.h  framebuffer-internal.h  framebuffer.c  input.c  log.c  log.h  main.c  main.h
src/pulse/: Makefile.am
src/terminal/: Makefile.am  terminal_handlers.c
src/terminal/terminal/: terminal_handlers.h
tests/: Makefile.am
